# watch-monitor-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/discord/: embed.rs  mod.rs
src/models/: mod.rs  site.rs  watch.rs
src/parsers/: condition.rs  details.rs  mod.rs  price.rs
src/scrapers/: grimmeissen.rs  juwelier_exchange.rs  mod.rs  rueschenbeck.rs  tropicalwatch.rs  watch_out.rs  worldoftime.rs
src/storage/: mod.rs  sqlite.rs
src/utils/: exchange_rate.rs  http.rs  mod.rs
