[package]
name = "watch-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Watch Monitor"]
description = "High-performance luxury watch monitoring system"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies"] }

# HTML parsing
scraper = "0.17"
selectors = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Utilities
once_cell = "1.19"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
url = "2.5"
percent-encoding = "2.3"

# Configuration
config = "0.13"

# Async trait
async-trait = "0.1"

# HTML escaping
html-escape = "0.2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1